# WindowsDeveloperToolbox

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/core/: cmds.rs
src/assets/: main.css
src/components/naiveui/: NaiveProvider.vue
src/components/tools/json_formatter/: JsonFormatter.vue
src/components/tools/naming_convention/: NamingConvention.vue
src/components/tools/system_components/: SystemComponents.vue
src/hooks/: useToastTool.ts
src/layout/: index.vue
src/router/: index.ts
src/utils/: clipboard.ts
src/views/color_picker/: ColorPickerView.vue
src/views/feature_list/: FeatureListView.vue  tools_dev.json  tools_system.json
src/views/home/: HomeView.vue
src/views/json_formatting/: JsonFormattingView.vue
src/views/naming_convention/: NamingConventionView.vue
src/views/network/: NetworkView.vue
src/views/settings/: SettingsView.vue
src/views/tools/: LocalToolsView.vue  NetworkToolsView.vue
src/views/translate/: TranslateView.vue
