[package]
name = "windows_developer_toolbox"
version = "0.1.2"
description = "Windows 开发人员工具箱"
authors = ["Tianxidev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.2.0"
tauri-plugin-shell = "2.0.0-rc"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
